# fpptools

./: README.md  pyproject.toml  todo.txt
fpptools/: fittinglist_str.txt  fpptools.py
tests/: test_fpptools.py
